test/tests/packages/lets_dup/dup.txt
error: duplicate package binding `$a`
 --> <packages/duppkg/constants.tql>:3:5
  |
3 | let $a = 2
  |     ^^ 
  ⋮
1 | let $a = 1
  |     -- previously defined here
  |
  = note: in package `duppkg`
